--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ body{
     overflow-x: hidden;
     -webkit-tap-highlight-color: transparent;
     padding: 5vh 15px;
+    background-attachment: fixed;
 }
 body::before{
     content: '';
@@ -94,6 +95,12 @@ section{
     align-items: center;
 }
 
+
+/* .hidden{
+    display: none !important;
+} */
+
+
 /* Custom Scrollbar */
 
 ::-webkit-scrollbar{
@@ -108,6 +115,10 @@ section{
 }
 
 /* button */
+button{
+    font-family: inherit;
+    user-select: none;
+}
 .btn{
     line-height: 1.5;
     background-color: var(--white-alpha-25);
@@ -184,4 +195,95 @@ section{
 .home-img .img-box img{
     width: 100%;
     border-radius: 50%;
+}
+
+/* Section tittle */
+.sec-padding{
+    padding: 80px 0;
+}
+.section-title{
+    padding: 0 15px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 40px;
+}
+.section-title h2{
+    font-size: 40px;
+    text-transform: capitalize;
+
+}
+/* About Section */
+.about-img{
+    width: 50%;
+    padding: 0 15px;
+}
+.about-text{
+    width: 50%;
+    padding: 0 15px;
+}
+.about-img .about-box{
+    background-color: var(--white-alpha-25);
+    max-width: 380px;
+    border: 1px solid var(--white-alpha-40);
+    margin: auto;
+    border-radius: 10px;
+}
+
+.about-img .about-box img{
+    width: 100%;
+
+}
+
+.about-text h3{
+    text-transform: capitalize;
+    font-size: 20px;
+    margin: 20px 0;
+}
+.about-text .skills{
+    display: flex;
+    flex-wrap: wrap;
+}
+.about-text .skill-item{
+    background-color: var(--white-alpha-25);
+    border: 1px solid var(--white-alpha-40);
+    padding: 5px 15px;
+    text-transform: capitalize;
+    margin: 0 10px 10px 0;
+    border-radius: 3    0px;
+}
+
+.about-tabs{
+    margin-top: 20px;
+
+}
+.about-tabs .tab-item{
+    padding: 2px 0;
+    background-color: transparent;
+    border: none;
+    text-transform: capitalize;
+    display: inline-block;
+    color: var(--blue-dark);
+    font-size: 20px;
+    cursor: pointer;
+    font-weight: 500 ;
+    margin: 0 30px 0 0;
+    position: relative;
+}
+.about-tabs .tab-item:last-child{
+    margin: 0;
+}
+.about-tabs .tab-item::before{
+
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0%;
+    height: 1px;
+    background: var(--blue-dark);
+    transition: width 0.3s ease;
+
+}
+.tab-item:hover::before{
+    width: 100%;
 }
