--- a/css/style.css
+++ b/css/style.css
@@ -366,3 +366,92 @@ button{
 .about-text .btn{
     margin: 0 15px 15px 0;
 }
+
+/*--------------
+ Portfolio Section 
+ ------------- */
+
+ .portfolio-item{
+     width: calc((100% / 3) - 30px);
+     margin: 0 15px 30px;
+ }
+ .portfolio-item-thumbnail{
+     padding: 10px;
+     background-color: var(--white-alpha-25);
+     border: 1px solid var(--white-alpha-40);
+     border-radius: 10px;
+ }
+ .portfolio-item-thumbnail img{
+     width: 100%;
+
+ }
+ .portfolio-item h3{
+     font-size: 20px;
+     text-transform: capitalize;
+     margin: 20px 0;
+ }
+ .portfolio-item-details{
+     display: none;
+ }
+
+ /* Portfolio Popup */
+    .position-popup{
+        position: fixed;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        z-index: 200;
+        visibility: hidden;
+        overflow-y: auto;
+    }
+
+    .pp-inner{
+        background-color: red;
+        min-height: 100vh;
+        padding: 40px 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .pp-content{
+        background-color: var(--white-alpha-25);
+        padding: 30px;
+        border-radius: 30px;
+        max-width: 900px;
+        width: 100%;
+        border: 1px solid var(--white-alpha-40);
+        backdrop-filter: var(--backdrop-filter-blur);
+         
+         
+    }
+
+    .pp-header{
+        position: relative;
+    }
+
+    .pp-header .btn{
+        height: 30px;
+        width: 40px;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        right: -40px;
+        top: -40px;
+    }
+
+    .pp-thumbnail img{
+        border-radius: 10px;
+    }
+    .pp-header h3{
+        font-size: 25px;
+        text-transform: capitalize;
+        margin: 20px 0 15px;
+    }
+
+    .pp-body .description{
+        margin-bottom: 20px ;
+    }
