--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,11 @@ body{
     -webkit-tap-highlight-color: transparent;
     padding: 5vh 15px;
     background-attachment: fixed;
+    padding: 35px 15px;
+}
+
+body.hide-scrolling{
+    overflow-y: hidden;
 }
 body::before{
     content: '';
@@ -66,6 +71,9 @@ h1,h2{
 h3,h4,h5,h6{
     font-weight: 500;
 }
+ul{
+    list-style: none;
+}
 img{
     max-width: 100%;
     vertical-align: middle;
@@ -76,12 +84,28 @@ section{
     min-height: 90vh;
     border-radius: 30px;
     backdrop-filter: var(--backdrop-filter-blur);
+    display: none;
+    margin-bottom: 30px;
  
 }
-
+section.active{
+    display: block;
+    animation: fadeIn 0.5s ease-in-out forwards;
+}
+section.fade-out{
+    animation: fadeOut 0.5s ease-in-out forwards;
+}
+.flex-end{
+    justify-content: flex-end;
+}
 .main{
     max-width: 1200px;
     margin: auto;
+    transition: all 0.5s ease-in-out;
+    position: relative;
+}
+.main.fade-out{
+    opacity: 0;
 }
 .container{
     padding: 0 40px;
@@ -157,9 +181,192 @@ button{
     color: var(--white);
 }
 
-.home-section{
+/* Animation */
+@keyframes fadeIn{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+@keyframes fadeOut{
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+/* Header */
+
+.header{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    padding: 20px 0 0;
+}
+
+.header.active{
+    position: fixed;
+    top: 35px;
+    padding: 20px 15px;
+}
+.header.active .container{
+    max-width: 1200px;
+    margin: auto;
+}
+.header .nav-toggler{
+    width: 50px;
+    height: 50px;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: var(--white-alpha-25);
+    border: 1px solid var(--white-alpha-40);
     display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 15px;
+    z-index: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+header .nav-toggler.hide{
+    opacity: 0;
+}
+
+.header .nav-toggler span{
+    height: 2px;
+    width: 24px;
+    background-color: var(--main-color);
+    position: relative;
+    transition: background-color 0.3s ease;
+}
+.header .nav-toggler span::before{
+    left: 0;
+    transform: translateY(-8px);
+}
+.header.active .nav-toggler span::before{
+    transform: rotate(45deg);
+}
+.header .nav-toggler span::after{
+    right: 0;
+    transform: translateY(8px);
+}
+.header.active .nav-toggler span::after{
+    transform: rotate(-45deg);
+}
+.header.active .nav-toggler span{
+    background-color: transparent;
+}
+.header:not(.active) .nav-toggler span::before,
+.header:not(.active) .nav-toggler span::after{
+    content: '';
+    position: absolute;  
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--main-color);
+    transition: all 0.3s ease;
+}
+.header .nav-toggler span::before{
+    left: 0;
+    transform: translateY(-8px);
+}
+.header .nav-toggler span::after{
+    right: 0;
+    transform: translateY(8px);
+}
+
+.header .nav-toggler:hover span::before,
+.header .nav-toggler:hover span::after {
+    width: 50%;
+}
+
+.header .nav{
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    padding: 35px 15px;
+    overflow-y: auto;
+    visibility: hidden;
+}
+.header.active .nav{
+  visibility: visible;
+}
+
+.header .nav-inner{
+    min-height: calc(100vh - 70px);
+    max-width: 1200px;
+    margin: auto;
+    background-color: var(--white-alpha-25);
+    border: 1px solid var(--white-alpha-40);
+    backdrop-filter: var(--backdrop-filter-blur);
+    padding: 50px 0 ;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: all 0.5s ease;
+}
+
+.header.active .nav-inner{
+    opacity: 1;
+}
+
+
+
+
+.header .nav-inner ul li{
+    text-align: center;
+}
+
+.header .nav-inner ul li a{
+    font-size: 40px;
+    text-transform: capitalize;
+    color: var(--blue-dark);
+    display: block;
+    font-weight: 500;
+    padding: 8px 15px;
+    transition: color 0.3s ease;
+    position: relative;
+}
+
+.header .nav-inner ul li a::before{
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 50%;
+    width: 0%;
+    
+    background-color: var(--white-alpha-25);
+    z-index: -1;
+    transition: width 0.5s ease;
+}
+.header .nav-inner ul li a:hover{
+    color: var(--main-color);
+    transition: color 0.3s ease;
+
+}
+.header .nav-inner ul li a:hover::before{   
+    width: 100%;
+}
+/* ------------- 
+Home Section
+-------------------*/
+.home-section{
+    /* display: flex; */
     padding: 120px 0;
+}
+
+.home-section.active{
+    display: flex;
 }
 
 .home-text, 
@@ -182,7 +389,7 @@ button{
     margin: 0 0 30px ;
 }
 .home-text .btn{
-    margin: 0 15px 15px 15px;
+    margin: 0 15px 15px 0;
 }
 .home-img .img-box{
     max-width: 360px;
@@ -395,25 +602,30 @@ button{
  }
 
  /* Portfolio Popup */
-    .position-popup{
+    .portfolio-popup{
         position: fixed;
         left: 0;
         top: 0;
         height: 100%;
         width: 100%;
         z-index: 200;
-        visibility: hidden;
+        visibility:hidden ;
+        }
+
+    .portfolio-popup.open{
+        visibility: visible;
         overflow-y: auto;
     }
 
     .pp-inner{
-        background-color: red;
-        min-height: 100vh;
+       min-height: 100vh;
         padding: 40px 15px;
         display: flex;
         align-items: center;
         justify-content: center;
     }
+
+
 
     .pp-content{
         background-color: var(--white-alpha-25);
@@ -423,8 +635,14 @@ button{
         width: 100%;
         border: 1px solid var(--white-alpha-40);
         backdrop-filter: var(--backdrop-filter-blur);
-         
-         
+        opacity: 0;
+        transform: scale(0.9);
+        
+    }
+    .portfolio-popup.open .pp-content{
+        opacity: 1;
+        transform: scale(1);
+        transition: all 0.5s ease;
     }
 
     .pp-header{
@@ -454,4 +672,94 @@ button{
 
     .pp-body .description{
         margin-bottom: 20px ;
+        
+    }
+    .pp-body .general-info li{
+        margin-bottom: 10px ;
+
+        font-weight: 500 ;
+        text-transform: capitalize;
+    }
+ 
+    .pp-body .general-info li span{
+        font-weight: 300;
+    }
+    .pp-body .general-info li a{
+        text-transform: lowercase;
+        color: var(--main-color);
+    }
+
+
+
+    /* Contact section1 */
+
+
+
+    .contact-form,
+    .contact-info{
+        width: 50%;
+        padding: 0 15px;
+    }
+
+    .contact-form .input-group{
+        width: 100%;
+        margin-bottom: 30px;
+
+    }
+    .contact-form .input-control::placeholder{
+        color: var(--blue-dark);
+        opacity: 0.8;
+        font-weight: 300;
+
+    }
+    .contact-form .input-control{
+        display: block;
+        width: 100%;
+        height: 50px;
+        border: none;
+        border-radius: 25px;
+        font-family: inherit;
+        font-weight: 400;
+        font-size: 16px;
+        background-color: var(--white-alpha-25);
+        padding: 0 20px;
+        color: var(--blue-dark);
+        border: 1px solid transparent;
+        transition: border-color 0.3s ease-in-out;
+    }
+    .contact-form .input-control:focus{
+        border-color: var(--white-alpha-40);
+    }
+    .contact-form textarea.input-control{
+        height: 120px;
+        resize: none;
+        padding-top: 15px;
+    }
+
+    .contact-info-item{
+        margin: 0 0 30px;
+        padding: 0 0 0 20px;
+    }
+    .contact-info-item h3{
+        font-size: 20px;
+        text-transform: capitalize;
+        margin: 0 0 5px;
+    }
+
+    .contact-info-item .social a{
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        height: 40px;
+        width: 40px;
+        background-color: var(--white-alpha-25);
+        border: var(--white-alpha-40);
+        color: var(--main-color);
+        border-radius: 50%;
+        margin: 6px 4px 0 0;
+        transition: all 0.3s  ease;
+    }
+    .contact-info-item .social a:hover{
+        color: var(--white);
+        background-color: var(--main-color);
     }
