--- a/css/style.css
+++ b/css/style.css
@@ -99,12 +99,12 @@ section.fade-out{
 .main{
     max-width: 1200px;
     margin: auto;
-    transition: all 0.5s ease-in-out;
+    /* transition: all 0.1s ease-in-out; */
     position: relative;
 }
-.main.fade-out{
+/* .main.fade-out{
     opacity: 0;
-}
+} */
 .container{
     padding: 0 40px;
     width: 100%;
@@ -224,11 +224,11 @@ button{
     padding: 20px 0 0;
 }
 
-.header.active{
+/* .header.active{
     position: fixed;
     top: 35px;
     padding: 20px 15px;
-}
+} */
 .header.active .container{
     max-width: 1200px;
     margin: auto;
@@ -491,7 +491,7 @@ Home Section
     margin: 0 30px 0 0;
     position: relative;
     opacity: 0.5;
-    transition: all 0.3s ease;
+    transition: all 0.1s ease;
 }
 .about-tabs .tab-item:last-child{
     margin: 0;
@@ -505,7 +505,7 @@ Home Section
     width: 0%;
     height: 1px;
     background: var(--blue-dark);
-    transition: width 0.3s ease;
+    transition: width 0.1s ease;
 
 }
 .tab-item:hover::before{
@@ -812,7 +812,7 @@ Home Section
         left: 40%;
         top: 60%;
         opacity: 0.2;
-        animation: bounceTop 5s ease-in-out infinite;
+        animation: bounceTop 5s ease infinite;
     }
 
     .bg-circles .circle-3{
@@ -842,5 +842,5 @@ Home Section
         right: 10%;
         top: 90%;
         opacity: 0.2;
-        animation: bounceTop 5s ease-in-out infinite;
+        animation: bounceTop 5s ease infinite;
     }
